// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Tests SubHeader.stories TaskFileLog 1`] = `
<div>
  <div
    class="css-rbu5o8"
    data-cy="log-header"
  >
    <div
      class="css-1xawlld"
    >
      <svg
        aria-label="File Icon"
        class=""
        fill="none"
        height="20"
        role="img"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M3 13V7h4.5A1.5 1.5 0 0 0 9 5.5V1h2a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Z"
          fill="currentColor"
        />
        <path
          d="M7.833 1h-.919a1 1 0 0 0-.707.293L3.293 4.207A1 1 0 0 0 3 4.914v.92h3.833a1 1 0 0 0 1-1V1Z"
          fill="currentColor"
        />
      </svg>
      <nav
        class="css-44gx6g"
        data-cy="breadcrumb-container"
      >
        <div
          class="leafygreen-ui-cssveg"
        >
          some-file-name.log
        </div>
      </nav>
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SubHeader.stories TaskLog 1`] = `
<div>
  <div
    class="css-rbu5o8"
    data-cy="log-header"
  >
    <div
      class="css-1xawlld"
    >
      <svg
        aria-label="File Icon"
        class=""
        fill="none"
        height="20"
        role="img"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M3 13V7h4.5A1.5 1.5 0 0 0 9 5.5V1h2a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Z"
          fill="currentColor"
        />
        <path
          d="M7.833 1h-.919a1 1 0 0 0-.707.293L3.293 4.207A1 1 0 0 0 3 4.914v.92h3.833a1 1 0 0 0 1-1V1Z"
          fill="currentColor"
        />
      </svg>
      <nav
        class="css-44gx6g"
        data-cy="breadcrumb-container"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SubHeader.stories TestLog 1`] = `
<div>
  <div
    class="css-rbu5o8"
    data-cy="log-header"
  >
    <div
      class="css-1xawlld"
    >
      <svg
        aria-label="File Icon"
        class=""
        fill="none"
        height="20"
        role="img"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M3 13V7h4.5A1.5 1.5 0 0 0 9 5.5V1h2a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Z"
          fill="currentColor"
        />
        <path
          d="M7.833 1h-.919a1 1 0 0 0-.707.293L3.293 4.207A1 1 0 0 0 3 4.914v.92h3.833a1 1 0 0 0 1-1V1Z"
          fill="currentColor"
        />
      </svg>
      <nav
        class="css-44gx6g"
        data-cy="breadcrumb-container"
      />
    </div>
  </div>
</div>
`;

exports[`Snapshot Tests SubHeader.stories UploadedLog 1`] = `
<div>
  <div
    class="css-rbu5o8"
    data-cy="log-header"
  >
    <div
      class="css-1xawlld"
    >
      <svg
        aria-label="File Icon"
        class=""
        fill="none"
        height="20"
        role="img"
        viewBox="0 0 16 16"
        width="20"
      >
        <path
          d="M3 13V7h4.5A1.5 1.5 0 0 0 9 5.5V1h2a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2Z"
          fill="currentColor"
        />
        <path
          d="M7.833 1h-.919a1 1 0 0 0-.707.293L3.293 4.207A1 1 0 0 0 3 4.914v.92h3.833a1 1 0 0 0 1-1V1Z"
          fill="currentColor"
        />
      </svg>
      <nav
        class="css-44gx6g"
        data-cy="breadcrumb-container"
      >
        <div
          class="leafygreen-ui-cssveg"
        >
          some-file-name.log
        </div>
      </nav>
    </div>
  </div>
</div>
`;
